--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 						<li><a href="Contact.html">Contact</a></li>
 					</ul>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://github.com/satakshideshmukh12?tab=repositories" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/satakshideshmukh12?tab=repositories" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 				</nav>
 
