--- a/Project.html
+++ b/Project.html
@@ -44,8 +44,8 @@
 							<li><a href="Contact.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/satakshideshmukh12?tab=repositories" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/satakshideshmukh12?tab=repositories" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -58,89 +58,89 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/satakshideshmukh12/LLM-Powered-Natural-Language-to-SQL">LLM Powered<br />
+										<h2><a href="https://github.com/satakshideshmukh12/LLM-Powered-Natural-Language-to-SQL" target="_blank">LLM Powered<br />
                                             Natural Language to SQL App</a></h2>
 									</header>
-									<a href="https://github.com/satakshideshmukh12/LLM-Powered-Natural-Language-to-SQL" class="image fit"><img src="images/P1.png" style="width: auto; height: auto; max-width: 100%; max-height: 100%;" alt="" /></a>
+									<a href="https://github.com/satakshideshmukh12/LLM-Powered-Natural-Language-to-SQL" target="_blank" class="image fit"><img src="images/P1.png" style="width: auto; height: auto; max-width: 100%; max-height: 100%;" alt="" /></a>
 									<p>Application capable of querying MySQL database using natural language inputs. The application facilitates retrieval of data and analysis of complex queries, enabling users to obtain actionable insights efficiently.</p>
 									<p><strong>Technology</strong>: MYSQL, SteamLit, LangChain using Google Palm</p><ul class="actions special">
-										<li><a href="https://github.com/satakshideshmukh12/LLM-Powered-Natural-Language-to-SQL" class="button">View Project</a></li>
+										<li><a href="https://github.com/satakshideshmukh12/LLM-Powered-Natural-Language-to-SQL" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/satakshideshmukh12/Sentiment-Analysis-and-Prediction-on-Amazon-Product-Reviews">Sentiment Analysis and Prediction
+										<h2><a href="https://github.com/satakshideshmukh12/Sentiment-Analysis-and-Prediction-on-Amazon-Product-Reviews" target="_blank">Sentiment Analysis and Prediction
                                             on Amazon Reviews</a></h2>
 									</header>
-									<a href="https://github.com/satakshideshmukh12/Sentiment-Analysis-and-Prediction-on-Amazon-Product-Reviews" class="image fit"><img src="images/P2.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
+									<a href="https://github.com/satakshideshmukh12/Sentiment-Analysis-and-Prediction-on-Amazon-Product-Reviews" target="_blank" class="image fit"><img src="images/P2.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
 									<p>Analyzed 34,000+ Amazon product reviews to understand customer sentiments. Used NLP and ML to predict satisfaction levels and identify key insights for product improvement.</p>
 									<p><strong>Technology</strong>: NLP, NLTK, ML, Neural Networks, Clustering</p><ul class="actions special">
-										<li><a href="https://github.com/satakshideshmukh12/Sentiment-Analysis-and-Prediction-on-Amazon-Product-Reviews" class="button">View Project</a></li>
+										<li><a href="https://github.com/satakshideshmukh12/Sentiment-Analysis-and-Prediction-on-Amazon-Product-Reviews" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href=https://github.com/satakshideshmukh12/Health-Insurance-Premium-Predictor>Health Insurance Premium Predictor</a></h2>
+										<h2><a href="https://github.com/satakshideshmukh12/Health-Insurance-Premium-Predictor" target="_blank">Health Insurance Premium Predictor</a></h2>
 									</header>
-									<a href=https://github.com/satakshideshmukh12/Health-Insurance-Premium-Predictor class="image fit"><img src="images/P3.png"  alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
+									<a href=https://github.com/satakshideshmukh12/Health-Insurance-Premium-Predictor target="_blank" class="image fit"><img src="images/P3.png"  alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
 									<p>A web application assists users in estimating insurance costs accurately. It organizes data to build a tool that predicts insurance premiums, aiding potential buyers in decision-making.</p>
 									<p><strong>Technology</strong>:NumPy, Pandas, Seaborn, EDA,  ML, Scikit-Learn, Flask</p><ul class="actions special">
-										<li><a href=https://github.com/satakshideshmukh12/Health-Insurance-Premium-Predictor class="button">View Project</a></li>
+										<li><a href=https://github.com/satakshideshmukh12/Health-Insurance-Premium-Predictor target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/satakshideshmukh12/Advertising-Efficiency-Analysis-Facebook-vs.-AdWords-Campaigns">Advertising Efficiency Analysis
+										<h2><a href="https://github.com/satakshideshmukh12/Advertising-Efficiency-Analysis-Facebook-vs.-AdWords-Campaigns" target="_blank">Advertising Efficiency Analysis
                                             Facebook vs. AdWords Campaigns</a></h2>
 									</header>
-									<a href="https://github.com/satakshideshmukh12/Advertising-Efficiency-Analysis-Facebook-vs.-AdWords-Campaigns" class="image fit"><img src="images/P4.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%; display: block; margin: 0 auto;"/></a>
+									<a href="https://github.com/satakshideshmukh12/Advertising-Efficiency-Analysis-Facebook-vs.-AdWords-Campaigns" target="_blank" class="image fit"><img src="images/P4.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%; display: block; margin: 0 auto;"/></a>
 									<p>Analyzed annual Facebook and AdWords campaigns for a marketing agency to optimize budget and improve client ROI by identifying the more effective platform.</p>
 									<p><strong>Technology</strong>: Pandas, EDA, Hypothesis Testing, A/B Testing, Regression Analysis</p><ul class="actions special">
-										<li><a href="https://github.com/satakshideshmukh12/Advertising-Efficiency-Analysis-Facebook-vs.-AdWords-Campaigns" class="button">View Project</a></li>
+										<li><a href="https://github.com/satakshideshmukh12/Advertising-Efficiency-Analysis-Facebook-vs.-AdWords-Campaigns" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/satakshideshmukh12/HR-Analytics-Dashboard">HR Analytics Dashboard<br />
+										<h2><a href="https://github.com/satakshideshmukh12/HR-Analytics-Dashboard" target="_blank">HR Analytics Dashboard<br />
                                             </a></h2>
 									</header>
-									<a href="https://github.com/satakshideshmukh12/HR-Analytics-Dashboard" class="image fit"><img src="images/P5.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
+									<a href="https://github.com/satakshideshmukh12/HR-Analytics-Dashboard" target="_blank" class="image fit"><img src="images/P5.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
 									<p>Application capable of querying a MySQL database using natural language inputs. The application should facilitate the retrieval of data and analysis of complex queries, enabling users to obtain actionable insights efficiently.</p>
 									<p><strong>Technology</strong>: MYSQL, SteamLit, LangChain using Google Palm</p><ul class="actions special">
-										<li><a href="https://github.com/satakshideshmukh12/HR-Analytics-Dashboard" class="button">View Project</a></li>
+										<li><a href="https://github.com/satakshideshmukh12/HR-Analytics-Dashboard" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
                                 <article>
 									<header>
-										<h2><a href="https://github.com/satakshideshmukh12/Property-Management-Database">Property Management Database
+										<h2><a href="https://github.com/satakshideshmukh12/Property-Management-Database" target="_blank">Property Management Database
                                             Development and Analysis</a></h2>
 									</header>
-									<a href="https://github.com/satakshideshmukh12/Property-Management-Database" class="image fit"><img src="images/P6.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
+									<a href="https://github.com/satakshideshmukh12/Property-Management-Database" target="_blank" class="image fit"><img src="images/P6.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
 									<p>A database schema was designed to organize property data. Conducted data analysis and created insightful reports using SQL. Provided recommendations and creative solutions to ensure efficient data management.</p>
 									<p><strong>Technology</strong>: SQL, MariaDB, Lucid Charts</p><ul class="actions special">
-										<li><a href="https://github.com/satakshideshmukh12/Property-Management-Database" class="button">View Project</a></li>
+										<li><a href="https://github.com/satakshideshmukh12/Property-Management-Database" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
                                 <article>
 									<header>
-										<h2><a href="https://github.com/satakshideshmukh12/Movie-Recommendation-Sytem">Movie Recommender System<br />
+										<h2><a href="https://github.com/satakshideshmukh12/Movie-Recommendation-Sytem" target="_blank">Movie Recommender System<br />
                                             </a></h2>
 									</header>
-									<a href="https://github.com/satakshideshmukh12/Movie-Recommendation-Sytem" class="image fit"><img src="images/P7.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
+									<a href="https://github.com/satakshideshmukh12/Movie-Recommendation-Sytem" target="_blank" class="image fit"><img src="images/P7.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
 									<p>A web application provides movie recommendations based on user input. The problem addressed was helping users discover movies they might enjoy by analyzing a large dataset of 5,000 movies.</p>
 									<p><strong>Technology</strong>: Pandas, NLTK, ML, Scikit-learn, Streamlit</p><ul class="actions special">
-										<li><a href="https://github.com/satakshideshmukh12/Movie-Recommendation-Sytem" class="button">View Project</a></li>
+										<li><a href="https://github.com/satakshideshmukh12/Movie-Recommendation-Sytem" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
                                 <article>
 									<header>
-										<h2><a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-">House Price Prediction<br />
+										<h2><a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-" target="_blank">House Price Prediction<br />
                                             </a></h2>
 									</header>
-									<a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-" class="image fit"><img src="images/P8.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
+									<a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-" target="_blank" class="image fit"><img src="images/P8.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
 									<p>A web application predicts house prices, addressing the need for accurate valuations. Analyzed housing data, created features, and tested models to enhance property value assessments.</p>
 									<p><strong>Technology</strong>: MYSQL, SteamLit, LangChain using Google Palm</p><ul class="actions special">
-										<li><a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-" class="button">View Project</a></li>
+										<li><a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
