--- a/Contact.html
+++ b/Contact.html
@@ -33,8 +33,8 @@
 						
 					</ul>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://github.com/satakshideshmukh12?tab=repositories" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/satakshideshmukh12?tab=repositories" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 				</nav>
 				
@@ -58,8 +58,8 @@
 							<section>
 								<h3 style="color:black; font-size: 16px;">Social</h3>
 								<ul class="icons alt" >
-									<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" class="icon brands alt fa-linkedin" style="color:black; font-size: 16px;"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/satakshideshmukh12"  class="icon brands alt fa-github" style="color:black; font-size: 16px;"><span class="label" >GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/satakshi-deshmukh/" target="_blank" class="icon brands alt fa-linkedin" style="color:black; font-size: 16px;"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/satakshideshmukh12"  target="_blank" class="icon brands alt fa-github" style="color:black; font-size: 16px;"><span class="label" >GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
