--- a/Skills.html
+++ b/Skills.html
@@ -55,7 +55,7 @@
 												</tr>
 												<tr>
 													<td><h4>Data Science:</h4></td>
-													<td> Machine Learning, NLP, TensorFlow, PyTorch, Keras, Scikit Learn, Clustering, LLM
+													<td> Machine Learning, NLP, TensorFlow, PyTorch, Keras, Scikit Learn, Clustering, LLM, ETL
                                                     </td>
 												</tr>
 												<tr>
