--- a/Project.html
+++ b/Project.html
@@ -101,6 +101,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://github.com/satakshideshmukh12/Movie-Rating-Analysis-on-Amazon-EMR-"target="_blank">Movie Rating Analysis on AWS<br />
+                                            </a></h2>
+									</header>
+									<a href="https://github.com/satakshideshmukh12/Movie-Rating-Analysis-on-Amazon-EMR-" class="image fit" target="_blank"><img src="images/P9.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
+									<p>Engineered data analysis pipelines, processing a dataset of 49,590 movie ratings.Performed advanced data queries and transformations, identifying top movies by year and rating, producing rating histogram. Managed AWS Hadoop cluster operations, handling script and data uploads to S3, monitoring executions, and managing results</p>
+									<p><strong>Technology</strong>: AWS, Hadoop, Apache Hive, Pig on Amazon EMR</p><ul class="actions special">
+										<li><a href="https://github.com/satakshideshmukh12/Movie-Rating-Analysis-on-Amazon-EMR-" class="button" target="_blank">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/satakshideshmukh12/HR-Analytics-Dashboard" target="_blank">HR Analytics Dashboard<br />
                                             </a></h2>
 									</header>
