--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 							<h3><u>Professional Experience</u></h3>
 							<h4>Yardi Software India Pvt. Ltd. - Software Engineer<span style="float: right;">Pune, India | Jul 2021 – Jul 2023</span></h4>
 						    <ul>
+							        <li>Implemented ETL with Hadoop and AWS for data acquisition and preparation, driving insights for client projects</li>
 								<li>Developed predictive models achieving > 90% accuracy in forecasting tenant rent default risk and lease renewal decision, leveraging historical tenant data</li>
 								<li>Performed EDA identifying KPI influencing tenant attrition, resulting in 15% increase in retention by targeted interventions </li>
 								<li>Developed and optimized SQL scripts for creating stored procedures and 25 custom reports using SSRS, enhancing data retrieval and reporting efficiency by 40%, demonstrating strong analytical and problem-solving skills</li>
