--- a/Project.html
+++ b/Project.html
@@ -150,7 +150,7 @@
 									</header>
 									<a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-" target="_blank" class="image fit"><img src="images/P8.png" alt="" style="width: auto; height: auto; max-width: 100%; max-height: 100%;"/></a>
 									<p>A web application predicts house prices, addressing the need for accurate valuations. Analyzed housing data, created features, and tested models to enhance property value assessments.</p>
-									<p><strong>Technology</strong>: MYSQL, SteamLit, LangChain using Google Palm</p><ul class="actions special">
+									<p><strong>Technology</strong>: Pandas, Random Forest, KNN, Logistic Regression, Scikit-learn</p><ul class="actions special">
 										<li><a href="https://github.com/satakshideshmukh12/Real-Estate-Analytics-" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
